--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,30 @@ services:
       - .env
     depends_on:
       - db
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+
+  celery:
+    build: .
+    command: celery -A core worker -l info
+    volumes:
+      - ./app:/code
+    env_file:
+      - .env
+    depends_on:
+      - db
+      - redis
+
+  celery-beat:
+    build: .
+    command: celery -A core beat -l info
+    volumes:
+      - ./app:/code
+    env_file:
+      - .env
+    depends_on:
+      - db
+      - redis
